<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanPenyakit.ScanPenyakitFragment">

    <!-- Header Layout -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/previewView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:tint="@color/primary_green"
            android:contentDescription="@string/deskripsi_back" />

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/halaman_penyakit"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <!-- Preview View for Camera -->
    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/deskripsi_preview" />

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/deskripsi_image_preview" />

    <!-- Button Layout -->
    <LinearLayout
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/previewView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Left Button -->
        <ImageButton
            android:id="@+id/buttonGallery"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_gallery"
            app:tint="@color/primary_green"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/deskripsi_galeri" />

        <!-- Center Button (larger) -->
        <ImageButton
            android:id="@+id/buttonShutter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/secondary_green"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_shutter"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/deskripsi_shutter" />

        <!-- Right Button -->
        <ImageButton
            android:id="@+id/buttonAnalyze"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_cari"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/deskripsi_analyze" />
    </LinearLayout>

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>